--- a/pom.xml
+++ b/pom.xml
@@ -105,9 +105,9 @@
     -->
     <dependencies>
         <dependency>
-            <groupId>c3p0</groupId>
-            <artifactId>c3p0</artifactId>
-            <version>0.9.1.2</version>
+            <groupId>com.jolbox</groupId>
+            <artifactId>bonecp</artifactId>
+            <version>0.7.1.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
