--- a/chimera-test.properties
+++ b/chimera-test.properties
@@ -1,8 +1,8 @@
 #
 # JDBC properties for Chimera
 #
-chimera.db.driver=org.hsqldb.jdbcDriver
-chimera.db.url=jdbc:hsqldb:mem:chimera
+chimera.db.driver=org.h2.Driver
+chimera.db.url=jdbc:h2:mem:chimera
 chimera.db.user=sa
 chimera.db.password=
-chimera.db.dialect=HsqlDB
+chimera.db.dialect=H2
