--- a/pom.xml
+++ b/pom.xml
@@ -121,9 +121,9 @@
             <version>1.6.4</version>
         </dependency>
         <dependency>
-            <groupId>hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
-            <version>2.2.6</version>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.3.166</version>
             <scope>test</scope>
         </dependency>
         <dependency>
