--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
     <packaging>jar</packaging>
     <url>http://www.dCache.ORG</url>
 
+    <scm>
+        <connection>scm:git:https://github.com/kofemann/chimera.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/kofemann/chimera.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+
     <!--
         CODE LICENSE
     -->
