--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,11 @@
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.hazelcast</groupId>
+            <artifactId>hazelcast</artifactId>
+            <version>3.10</version>
+        </dependency>
     </dependencies>
 
     <!--
